--- a/minimap/Dockerfile
+++ b/minimap/Dockerfile
@@ -1,14 +1,19 @@
 # ------------------------------------------------------------
-#  Stage 1 – build HTSlib, Samtools and Minimap2
+#  Stage 1 – compile everything
 # ------------------------------------------------------------
-ARG UBUNTU_VERSION=24.04
-ARG HTSLIB_VERSION=1.21          # change if you need a different release
-ARG SAMTOOLS_VERSION=1.21        # must be compatible with the HTSlib above
-ARG MINIMAP2_VERSION=2.30        # latest at time of writing
+ARG UBUNTU_VERSION=24.04          # you can change this to 22.04 if you like
+ARG HTSLIB_VERSION=1.21           # change to the release you need
+ARG SAMTOOLS_VERSION=1.21         # must be compatible with the HTSlib above
+ARG MINIMAP2_VERSION=2.30         # latest at time of writing
 
 FROM ubuntu:${UBUNTU_VERSION} AS builder
 
-# ------------------- build‑time packages --------------------
+# ----- re‑declare the arguments for this stage -----------------
+ARG HTSLIB_VERSION
+ARG SAMTOOLS_VERSION
+ARG MINIMAP2_VERSION
+
+# ----- install only the packages needed for building ----------
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
@@ -30,7 +35,9 @@ RUN apt-get update && \
 
 WORKDIR /opt/build
 
-# ------------------- HTSlib --------------------------------
+# ------------------------------------------------------------
+#  HTSlib (foundation for Samtools)
+# ------------------------------------------------------------
 RUN wget -O htslib-${HTSLIB_VERSION}.tar.bz2 \
         https://github.com/samtools/htslib/releases/download/${HTSLIB_VERSION}/htslib-${HTSLIB_VERSION}.tar.bz2 && \
     tar -xjf htslib-${HTSLIB_VERSION}.tar.bz2 && \
@@ -40,7 +47,9 @@ RUN wget -O htslib-${HTSLIB_VERSION}.tar.bz2 \
     make install && \
     cd /opt/build && rm -rf htslib-${HTSLIB_VERSION}*
 
-# ------------------- Samtools -------------------------------
+# ------------------------------------------------------------
+#  Samtools (built against the HTSlib we just installed)
+# ------------------------------------------------------------
 RUN wget -O samtools-${SAMTOOLS_VERSION}.tar.bz2 \
         https://github.com/samtools/samtools/releases/download/${SAMTOOLS_VERSION}/samtools-${SAMTOOLS_VERSION}.tar.bz2 && \
     tar -xjf samtools-${SAMTOOLS_VERSION}.tar.bz2 && \
@@ -50,7 +59,9 @@ RUN wget -O samtools-${SAMTOOLS_VERSION}.tar.bz2 \
     make install && \
     cd /opt/build && rm -rf samtools-${SAMTOOLS_VERSION}*
 
-# ------------------- Minimap2 -------------------------------
+# ------------------------------------------------------------
+#  Minimap2 (independent binary)
+# ------------------------------------------------------------
 RUN wget -O minimap2-${MINIMAP2_VERSION}.tar.bz2 \
         https://github.com/lh3/minimap2/releases/download/v${MINIMAP2_VERSION}/minimap2-${MINIMAP2_VERSION}.tar.bz2 && \
     tar -xjf minimap2-${MINIMAP2_VERSION}.tar.bz2 && \
@@ -59,20 +70,19 @@ RUN wget -O minimap2-${MINIMAP2_VERSION}.tar.bz2 \
     install -m 0755 minimap2 /opt/build/bin/minimap2 && \
     cd /opt/build && rm -rf minimap2-${MINIMAP2_VERSION}*
 
-# Refresh the shared‑library cache so the binaries can find libhts.so
+# Refresh the dynamic‑linker cache so the binaries can find libhts.so
 RUN ldconfig
 
 # ------------------------------------------------------------
-#  Stage 2 – runtime image (tiny, only the compiled binaries)
+#  Stage 2 – tiny runtime image
 # ------------------------------------------------------------
 FROM ubuntu:${UBUNTU_VERSION}
 
-ARG UBUNTU_VERSION
 ENV DEBIAN_FRONTEND=noninteractive \
     LANG=C.UTF-8 \
     LC_ALL=C.UTF-8
 
-# ---- minimal runtime dependencies (nothing to compile) ----
+# ---- runtime libraries required by the compiled tools ----
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
         ca-certificates \
@@ -85,23 +95,23 @@ RUN apt-get update && \
         libncursesw6 && \
     rm -rf /var/lib/apt/lists/*
 
-# ---- copy the compiled tools from the builder stage ----
+# ---- copy the compiled binaries and libraries from the builder ----
 COPY --from=builder /opt/build /usr/local
 
-# Ensure the dynamic linker knows about /usr/local/lib
+# Ensure the dynamic linker sees the libraries we just copied
 RUN ldconfig
 
-# ---- create a non‑root user (UID 2000) -----------------
+# ---- non‑root user ------------------------------------------------
 ARG USER=worker
 ARG UID=2000
 ARG GID=2000
 RUN groupadd -g ${GID} ${USER} && \
     useradd -m -u ${UID} -g ${GID} -s /bin/bash ${USER}
 
-# ---- set up a friendly environment --------------------
+# ---- environment ---------------------------------------------------
 ENV PATH="/usr/local/bin:${PATH}"
 WORKDIR /data
 USER ${USER}
 
-# ---- default command (interactive shell) -------------
+# ---- default command (interactive shell) -------------------------
 CMD ["bash"]
